--- a/app/styles/prototype/_search.scss
+++ b/app/styles/prototype/_search.scss
@@ -66,3 +66,10 @@
   height: 100%;
   overflow: visible;
 }
+
+.au-u-para-small {
+  .au-c-link {
+    font-size: inherit;
+    vertical-align: initial;
+  }
+}
