fix: typo in helper name

--- a/app/components/agenda/agenda-header/publication-pills.hbs
+++ b/app/components/agenda/agenda-header/publication-pills.hbs
@@ -5,7 +5,7 @@
         <AuPill @skin="success" @icon="check" class="auk-u-mr-2 auk-u-mt-2">
           {{t
             "decisions-were-released-at"
-            date=(data @meeting.internalDecisionPublicationActivity.startDate)
+            date=(date @meeting.internalDecisionPublicationActivity.startDate)
             time=(time @meeting.internalDecisionPublicationActivity.startDate)
           }}
         </AuPill>
