start content update

--- a/app/templates/publications/overview/start.hbs
+++ b/app/templates/publications/overview/start.hbs
@@ -45,16 +45,50 @@
         <tbody>
           <tr>
             <td>
-              <a href="#!">Documentnaam</a>
+              <a href="/document/607452506D035D0008000284">VR 2020 2003 DOC.0246-1 Wijziging Decreet VJKB</a>
+            </td>
+            <td class="au-u-text-left">
+              <AuPill @size="small">Nota</AuPill>
+            </td>
+            <td>
+              Benjamin Dalle
+            </td>
+            <td>
+              14-10-2022
+            </td>
+            <td class="au-u-text-right">
+              <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="/document/607452506D035D0008000285">VR 2020 2003 DOC.0246-2 Wijziging Decreet VJKB</a>
+            </td>
+            <td class="au-u-text-left">
+              <AuPill @size="small">Decreet</AuPill>
+            </td>
+            <td>
+              Benjamin Dalle
+            </td>
+            <td>
+              14-10-2022
+            </td>
+            <td class="au-u-text-right">
+              <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="/document/6077FB1D6D035D00080002E1">VR 2020 3004 DOC.0417-2 COVID-energie</a>
             </td>
             <td class="au-u-text-left">
               <AuPill @size="small">BVR</AuPill>
             </td>
             <td>
-              Minister
+              Zuhal Demir
             </td>
             <td>
-              18-11-2022
+              14-10-2022
             </td>
             <td class="au-u-text-right">
               <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
@@ -62,67 +96,16 @@
           </tr>
           <tr>
             <td>
-              <a href="#!">Documentnaam</a>
+              <a href="/document/60781DCB6D035D000800032E">VR 2020 1701 DOC.0011-2 Decreet activeringsregie</a>
             </td>
             <td class="au-u-text-left">
-              <AuPill>BVR</AuPill>
+              <AuPill @size="small">Decreet</AuPill>
             </td>
             <td>
-              Minister
+              Zuhal Demir
             </td>
             <td>
-              18-11-2022
-            </td>
-            <td class="au-u-text-right">
-              <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#!">Documentnaam</a>
-            </td>
-            <td class="au-u-text-left">
-              <AuPill>BVR</AuPill>
-            </td>
-            <td>
-              Minister
-            </td>
-            <td>
-              18-11-2022
-            </td>
-            <td class="au-u-text-right">
-              <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#!">Documentnaam</a>
-            </td>
-            <td class="au-u-text-left">
-              <AuPill>BVR</AuPill>
-            </td>
-            <td>
-              Minister
-            </td>
-            <td>
-              18-11-2022
-            </td>
-            <td class="au-u-text-right">
-              <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#!">Documentnaam</a>
-            </td>
-            <td class="au-u-text-left">
-              <AuPill>BVR</AuPill>
-            </td>
-            <td>
-              Minister
-            </td>
-            <td>
-              18-11-2022
+              14-10-2022
             </td>
             <td class="au-u-text-right">
               <AuButton @skin="naked" @icon="add" {{on "click" this.modal}}>Nieuwe publicatie</AuButton>
@@ -140,7 +123,7 @@
         <div class="auk-pagination">
           <ul class="auk-pagination__list">
             <li class="auk-pagination__element">
-              <p><strong>1-5</strong> van 5</p>
+              <p><strong>1-4</strong> van 4</p>
             </li>
           </ul>
         </div>
