--- a/app/templates/search-future/announcements.hbs
+++ b/app/templates/search-future/announcements.hbs
@@ -12,7 +12,7 @@
               <AuNavigationLink
                 @route="search-future.all"
               >
-                Allle inhoud
+                Alle inhoud
               </AuNavigationLink>
             </li>
             <li class="au-c-list-navigation__item">
